# ezra-take-home-test

./: .env.example  .gitignore  .pre-commit-config.yaml  MIGRATION.md  MODELS.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  TaskManagement.sln  pyproject.toml  pytest.ini  requirements.txt  run-tests.sh  setup.py
backend-dotnet/: .gitignore  README.md  (+3 more)
backend/TaskManagement.Api/: .env.example  Program.cs  appsettings.json
backend/TaskManagement.Api/Configuration/: JwtSettings.cs
backend/TaskManagement.Api/Controllers/: AuthController.cs  TasksController.cs
backend/TaskManagement.Api/DTOs/: TaskDtos.cs
backend/TaskManagement.Api/Data/: ApplicationDbContext.cs
backend/TaskManagement.Api/Middleware/: ValidationExceptionMiddleware.cs
backend/TaskManagement.Api/Services/: ITaskService.cs  IUserService.cs  TaskService.cs  UserService.cs
backend/TaskManagement.Tests/: AuthControllerTests.cs  MiddlewareTests.cs  TaskManagement.Tests.csproj  TasksControllerTests.cs  TestWebApplicationFactory.cs
backend/TaskManagement.Tests/Fixtures/: TestFixture.cs
backend/app/: config.py  database.py  main.py
backend/app/dependencies/: auth.py
backend/app/models/: task.py  user.py
backend/app/routers/: auth.py  health.py  tasks.py  users.py
backend/app/schemas/: __init__.py  task.py  user.py
backend/app/services/: __init__.py  task_service.py  user_service.py
backend/app/utils/: errors.py  security.py
backend/tests/: conftest.py  test_auth.py  test_tasks.py  test_users.py  test_validation_errors.py
(+86 files in other folders)
